force-app/main/default/objects/Reservation__c/fields/Reservation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Date__c</fullName>
    <label>Reservation Date</label>
    <type>DateTime</type>
</CustomField>