force-app/main/default/objects/Reservation__c/validationRules/CheckInBeforeCheckOut.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckInBeforeCheckOut</fullName>
    <active>true</active>
    <errorConditionFormula>Check_in_Date__c &gt;= Check_out_Date__c</errorConditionFormula>
    <errorMessage>Check-in date must be before the check-out date</errorMessage>
</ValidationRule>