force-app/main/default/objects/Reservation__c/validationRules/Past_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Past_Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    DATEVALUE(Check_in_Date__c) &lt; TODAY(),
    ISPICKVAL(Status__c, &apos;Confirmed&apos;)
)</errorConditionFormula>
    <errorMessage>Check-in date cannot be in the past</errorMessage>
</ValidationRule>