force-app/main/default/objects/Reservation__c/validationRules/RoomDoubleBooking.validationRule-meta.xml
<ValidationRule>
    <fullName>RoomDoubleBooking</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Room__r.Availability_Status__c, &quot;Booked&quot;),
    ISNEW(),
    NOT(ISBLANK(Room__c)),
    Check_in_Date__c &gt;= Reservation_Date__c,
    Check_out_Date__c &gt;= Reservation_Date__c,
    Check_in_Date__c &lt; Check_out_Date__c,
    NOT(
        AND(
            Room__c = PRIORVALUE(Room__c),
            ISCHANGED(Room__c)
        )
    ),
    NOT(
        OR(
            AND(
                Room__c = PRIORVALUE(Room__c),
                Check_in_Date__c &gt;= PRIORVALUE(Check_in_Date__c),
                Check_in_Date__c &lt; PRIORVALUE(Check_out_Date__c)
            ),
            AND(
                Room__c = PRIORVALUE(Room__c),
                Check_out_Date__c &gt; PRIORVALUE(Check_in_Date__c),
                Check_out_Date__c &lt;= PRIORVALUE(Check_out_Date__c)
            ),
            AND(
                Room__c = PRIORVALUE(Room__c),
                Check_in_Date__c &lt;= PRIORVALUE(Check_in_Date__c),
                Check_out_Date__c &gt;= PRIORVALUE(Check_out_Date__c)
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>This room is already booked for the selected dates</errorMessage>
</ValidationRule>