force-app/main/default/objects/Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Room__c</columns>
    <columns>Reservation_Status__c</columns>
    <columns>First_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>