force-app/main/default/objects/Reservation__c/listViews/Reservation_List.listView-meta.xml
<ListView>
    <fullName>Reservation_List</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Room__c</columns>
    <columns>Reservation_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Reservation List</label>
</ListView>